--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ p, li{
     <h2>About <span style = "color:rgb(186,12,64)">Me</span></h2>
 
     <div class="about-container">
-        <img src="" alt="Krishna Sri">
+        <img src="k.jpg" alt="Krishna Sri">
 
         <p>
     Final-year B.Sc undergraduate student at Aditya Degree College with a strong passion for technology and continuous learning
@@ -681,5 +681,6 @@ p, li{
 
 </body>
 </html>
+
 
 
